# codebase

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  init.py  memcached.conf  restart_memc.sh
include/: extutils.h  stdrdma.h  stdutils.h
include/rdma/: context.h  mgr.h  predefs.h  qp.h  resource.h  rpc.h  simple_kv.h  utils.h
include/rdma/rpc/: common.h  rc_rpc.h  rpc.h  shm.h
include/utils/: benchmark.h  coroutine.h  defs.h  epoch.h  helpers.h  lock_table.h  log.h  memcache.h  net_utils.h  numa_utils.h  pm_utils.h  random.h  serialize.h  skiplist.h  slice.h  str_utils.h  thread_utils.h  timer.h  topology.h  type_traits.h  v_rwlock.h
src/: main.cpp  util_defs.cpp
src/rdma/: context.cpp  qp.cpp  rc_rpc.cpp  resource.cpp  rpc.cpp
src/utils/: city.cc  extutils_defs.cpp  stdutils_defs.cpp  util_defs.cpp
tests/: CMakeLists.txt  rpc_client.cpp  rpc_server.cpp  test_coro.cpp  test_rdma.cpp  test_rwl.cpp
tests/rdma/: op_bench.cpp  rpc_client.cpp  rpc_server.cpp  scalability_rpc.cpp  test_shm.cpp
tests/think/: CMakeLists.txt  cas_faa_dm.cpp  coherence.cpp  mem.cpp  rdma_op.cpp  readme.md  scalability.cpp
